@@ -150,10 +150,10 @@
     font-lock-type-face))
 
 (defvar ebuild-mode-keywords-toolchain-funcs
-  '(("tc-getPROG" "tc-getAR" "tc-getAS" "tc-getCC" "tc-getCPP" "tc-getCXX"
+  '(("tc-getPROG" "tc-getBUILD_PROG" "tc-getAR" "tc-getAS" "tc-getCC" "tc-getCPP" "tc-getCXX"
      "tc-getLD" "tc-getSTRIP" "tc-getNM" "tc-getRANLIB" "tc-getF77"
-     "tc-getF90" "tc-getFORTRAN" "tc-getGCJ" "tc-getBUILD_CC"
-     "tc-getRC" "tc-getDLLWRAP" "tc-getPKG_CONFIG" "tc-export"
+     "tc-getF90" "tc-getFORTRAN" "tc-getGCJ" "tc-getBUILD_CC" "tc-getBUILD_CPP"
+     "tc-getBUILD_CXX" "tc-getRC" "tc-getDLLWRAP" "tc-getPKG_CONFIG" "tc-export"
      "tc-is-cross-compiler" "tc-ninja_magic_to_arch" "tc-has-tls"
      "tc-is-hardfloat" "tc-arch-kernel" "tc-arch" "tc-endian"
      "gcc-fullversion" "gcc-version" "gcc-major-version" "gcc-minor-version"
