@@ -4,6 +4,8 @@
 	systemd_dotmpfilesd() and systemd_newunit() functions
 	(ebuild-mode-keywords-check_reqs): Add check_reqs.eclass
 	(ebuild-mode-keywords-office-ext): Add office_ext.eclass
+	(ebuild-mode-keywords-toolchain-funcs): Add tc-getBUILD_PROG(),
+	tc-getBUILD_CPP(), tc-getBUILD_CXX() functions
 
 2011-12-23  Ulrich Mueller  <ulm@gentoo.org>
 
